fixed menu icon spacing issue for mobile

--- a/wp-content/themes/crander/sass/style.scss
+++ b/wp-content/themes/crander/sass/style.scss
@@ -328,6 +328,7 @@ footer {
           span.ss-icon {
             font-size: 18px;
             width: 5%;
+            top: 0;
           }
           span.title  {
             display: block;
